# curly-enigma

./: .gitignore  README.md  anti_curvature.py  dgah.py  dgah_ablation.py  dgah_regime.py  dgah_v2.py  dgah_visualisation.html  gflownet_ablation_prior.py  gflownet_code.py  gflownet_law.py  gflownet_minimal.py  gflownet_program.py  gflownet_regime.py  phase.py  phase2d.npz  phase2d.py  phase_results.json  proof.tex  pyproject.toml  run.py  step_a.py  theorem_b.py  theorem_b2.py  verify.py
.github/workflows/: ci.yml
benchmarks/: compare.py
experiments/: multiseed.py
geoflow/: __init__.py  agent.py
geoflow/algorithms/: __init__.py  losses.py  trainer.py
geoflow/callbacks/: __init__.py  base.py  builtin.py
geoflow/chat/: __init__.py  agent.py  executor.py  parser.py
geoflow/cli/: main.py
geoflow/configs/: combinatorial_default.yaml  gridworld_default.yaml
geoflow/core/: __init__.py  buffer.py  gflownet.py  kernel.py  metric.py
geoflow/envs/: __init__.py  base.py  combinatorial.py  gridworld.py
geoflow/experiment/: __init__.py  results.py  runner.py
geoflow/utils/: __init__.py  logging.py  metrics.py
public/: index.html
results/: multiseed.json
tests/: test_geoflow.py
